--- a/info.plist
+++ b/info.plist
@@ -7,7 +7,34 @@
 	<key>category</key>
 	<string>Tools</string>
 	<key>connections</key>
-	<dict/>
+	<dict>
+		<key>03A64B3B-833B-4C81-81C6-8BE345D3BEAC</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>BF6F70C7-C8C7-4D55-B159-38437C1C4807</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>E4C22947-8474-420B-B17F-013B95F81522</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>03A64B3B-833B-4C81-81C6-8BE345D3BEAC</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+	</dict>
 	<key>createdby</key>
 	<string>Yourtion</string>
 	<key>description</key>
@@ -21,8 +48,58 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>alfredfiltersresults</key>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>68</integer>
+				<key>script</key>
+				<string>import sys
+from client import Client
+
+ss = Client()
+query = sys.argv[1]
+
+ss.action(query)</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>3</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>03A64B3B-833B-4C81-81C6-8BE345D3BEAC</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>lastpathcomponent</key>
+				<false/>
+				<key>onlyshowifquerypopulated</key>
 				<true/>
+				<key>removeextension</key>
+				<false/>
+				<key>text</key>
+				<string>{query}</string>
+				<key>title</key>
+				<string>ShadowSockController</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.notification</string>
+			<key>uid</key>
+			<string>BF6F70C7-C8C7-4D55-B159-38437C1C4807</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>escaping</key>
@@ -38,7 +115,7 @@
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string></string>
+				<string>Loding</string>
 				<key>script</key>
 				<string>from client import Client
 
@@ -71,6 +148,20 @@ ss.getList()
 	<string></string>
 	<key>uidata</key>
 	<dict>
+		<key>03A64B3B-833B-4C81-81C6-8BE345D3BEAC</key>
+		<dict>
+			<key>xpos</key>
+			<integer>350</integer>
+			<key>ypos</key>
+			<integer>120</integer>
+		</dict>
+		<key>BF6F70C7-C8C7-4D55-B159-38437C1C4807</key>
+		<dict>
+			<key>xpos</key>
+			<integer>570</integer>
+			<key>ypos</key>
+			<integer>120</integer>
+		</dict>
 		<key>E4C22947-8474-420B-B17F-013B95F81522</key>
 		<dict>
 			<key>xpos</key>
