--- a/Source/info.plist
+++ b/Source/info.plist
@@ -170,6 +170,8 @@ ss.action(query)</string>
 			<integer>120</integer>
 		</dict>
 	</dict>
+	<key>version</key>
+	<string>0.1</string>
 	<key>webaddress</key>
 	<string>https://github.com/yourtion</string>
 </dict>
